Refactor to ESM, update structure, add shop route
Converted app.js to ES modules, updated plugin and route loading, and removed CommonJS usage. Added routes/shop/index.js and server.js, removed example route and related tests, and switched from npm to pnpm for dependency management.

--- a/package.json
+++ b/package.json
@@ -2,24 +2,25 @@
   "name": "core",
   "version": "1.0.0",
   "description": "This project was bootstrapped with Fastify-CLI.",
+  "type": "module",
   "main": "app.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
     "test": "node --test test/**/*.test.js",
-    "start": "fastify start -l info app.js",
-    "dev": "fastify start -w -l info -P app.js"
+    "start": "node server.js",
+    "dev": "node --watch server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "wxsub system lnc.",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^5.0.0",
-    "fastify-plugin": "^5.0.0",
     "@fastify/autoload": "^6.0.0",
     "@fastify/sensible": "^6.0.0",
-    "fastify-cli": "^7.4.0"
-  },
-  "devDependencies": {}
+    "fastify": "^5.0.0",
+    "fastify-cli": "^7.4.0",
+    "fastify-plugin": "^5.0.0",
+    "nedb": "^1.8.0"
+  }
 }
