Update dev script to watch additional directories
The dev script now watches the 'routes' and 'plugins' directories in addition to the main server file, enabling automatic restarts when files in these directories change.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "node --test test/**/*.test.js",
     "start": "node server.js",
-    "dev": "node --watch server.js"
+    "dev": "node --watch --watch-path routes --watch-path plugins server.js"
   },
   "keywords": [],
   "author": "wxsub system lnc.",
