--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fastify": "^5.0.0",
     "fastify-cli": "^7.4.0",
     "fastify-plugin": "^5.0.0",
+    "moment": "^2.30.1",
     "nedb": "^1.8.0"
   }
 }
