Add import alias for utils in package.json
Introduced an 'imports' field to define the '#util/*' alias pointing to the './utils/*' directory, simplifying module imports.

--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "fastify-plugin": "^5.0.0",
     "moment": "^2.30.1",
     "nedb": "^1.8.0"
+  },
+  "imports": {
+    "#util/*": "./utils/*"
   }
 }
